# JavierGomez

SimulacionDeLaDifusionDelCalor/: CMakeLists.txt  main.c
Vecinomasproximo/: Makefile  README.txt
Vecinomasproximo/include/: algorithms.h  benchmark.h  config.h  dataset.h  triangular.h
Vecinomasproximo/src/: algorithms.c  benchmark.c  dataset.c  main.c  triangular.c
